--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="about" class="section__container about__section">
       <h2 class="section__title">about</h2>
       <div class="about__content">
-        <img src="/assets/img/profile.jpg" alt="Developer's profile image" class="about__image" />
+        <img src="/assets/img/banner.jpg" alt="Developer's profile image" class="about__image" />
         <p class="about__text" data-bohr-cms data-bohr-file="index.html" data-bohr-index="2" data-bohr-dist-file="index.html" data-bohr-dist-index="2">Estudante de ciencia da computação, que está a caminho de se desenvolver no meio da area de Data Science. Cursando o 5 semestre da faculdade Uniruy ,Salvador ,Bahia.</p>
       </div>
     </section>
@@ -67,18 +67,6 @@
           </a>
         </li>
         <li class="skill__item">
-          <a target="_blank" href="https://www.gatsbyjs.com/">
-            <img src="/assets/svg/skills/gatsby-icon.svg" alt="Skill icon" class="skill__icon" />
-            <span class="skill__name">gatsby</span>
-          </a>
-        </li>
-        <li class="skill__item">
-          <a target="_blank" href="https://gulpjs.com/">
-            <img src="/assets/svg/skills/gulp-icon.svg" alt="Skill icon" class="skill__icon" />
-            <span class="skill__name">gulp</span>
-          </a>
-        </li>
-        <li class="skill__item">
           <a target="_blank" href="https://www.w3schools.com/html/">
             <img src="/assets/svg/skills/html-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">html</span>
@@ -96,13 +84,7 @@
             <span class="skill__name">python</span>
           </a>
         </li>
-        <li class="skill__item">
-          <a target="_blank" href="https://reactjs.org/">
-            <img src="/assets/svg/skills/react-icon.svg" alt="Skill icon" class="skill__icon" />
-            <span class="skill__name">react</span>
-          </a>
-        </li>
-      </ul>
+        </ul>
     </section>
     
     <section id="contact" class="section__container contact__section">
