--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="about" class="section__container about__section">
       <h2 class="section__title">about</h2>
       <div class="about__content">
-        <img src="/assets/img/banner.jpg" alt="Developer's profile image" class="about__image" />
+        <img src="/assets/img/banner.png" alt="Developer's profile image" class="about__image" />
         <p class="about__text" data-bohr-cms data-bohr-file="index.html" data-bohr-index="2" data-bohr-dist-file="index.html" data-bohr-dist-index="2">Estudante de ciencia da computação, que está a caminho de se desenvolver no meio da area de Data Science. Cursando o 5 semestre da faculdade Uniruy ,Salvador ,Bahia.</p>
       </div>
     </section>
@@ -89,28 +89,15 @@
     
     <section id="contact" class="section__container contact__section">
       <h2 class="section__title">contact</h2>
-      <p class="contact__text">Did you like my work? Contact me to know more or follow me on social media.</p>
+      <p class="contact__text">Gostou do meu trabalho? Este são meus meio de comunicação</p>
       <div class="contact__list">
-        <a href="" class="contact__item">
-          <img src="/assets/svg/contacts/discord-icon.svg" alt="">
-        </a>
-
         <a href="" class="contact__item">
           <img src="/assets/svg/contacts/phone-icon.svg" alt="">
         </a>
 
-        <a href="" class="contact__item">
+        <a target href="https://github.com/LuisNunes301" class="contact__item">
           <img src="/assets/svg/contacts/github-icon.svg" alt="">
         </a>
-
-        <a href="" class="contact__item">
-          <img src="/assets/svg/contacts/instagram-icon.svg" alt="">
-        </a>
-
-        <a href="" class="contact__item">
-          <img src="/assets/svg/contacts/youtube-icon.svg" alt="">
-        </a>
-        
       </div>
     </section>
   </main>
