--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <main class="main__container">
     <section id="about" class="section__container about__section">
-      <h2 class="section__title">about</h2>
+      <h2 class="section__title">sobre</h2>
       <div class="about__content">
         <img src="/assets/img/banner.png" alt="Developer's profile image" class="about__image" />
         <p class="about__text" data-bohr-cms data-bohr-file="index.html" data-bohr-index="2" data-bohr-dist-file="index.html" data-bohr-dist-index="2">Estudante de ciencia da computação, que está a caminho de se desenvolver no meio da area de Data Science. Cursando o 5 semestre da faculdade Uniruy ,Salvador ,Bahia.</p>
@@ -31,7 +31,7 @@
     </section>
 
     <section id="projects" class="section__container projects__section">
-      <h2 class="section__title">projects</h2>
+      <h2 class="section__title">projetos</h2>
 
       <div id="project-carousel" class="project__carousel">
         <div id="project-ring" class="project__ring">
@@ -88,11 +88,11 @@
     </section>
     
     <section id="contact" class="section__container contact__section">
-      <h2 class="section__title">contact</h2>
-      <p class="contact__text">Gostou do meu trabalho? Este são meus meio de comunicação</p>
+      <h2 class="section__title">Contato</h2>
+      <p class="contact__text">Gostou do meu trabalho? Este são meus meio de comunicação.</p>
       <div class="contact__list">
-        <a href="" class="contact__item">
-          <img src="/assets/svg/contacts/phone-icon.svg" alt="">
+        <a href="https://www.linkedin.com/in/luisnunes30/" class="contact__item">
+          <img src="/assets/svg/contacts/linkedin-icon.svg" alt="">
         </a>
 
         <a target href="https://github.com/LuisNunes301" class="contact__item">
